realign bill items, fix main content area padding

--- a/web/themes/custom/nysenate_theme/src/patterns/components/bill-item/bill-item.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/bill-item/bill-item.scss
@@ -487,7 +487,7 @@ p.c-bill-update--date {
     }
 
     .c-block--btn-toggle {
-      background: $grey05;
+      //background: $grey05!important;
     }
 
     .c-legislation-info {
