--- a/web/themes/custom/nysenate_theme/src/patterns/global/blocks/_blocks.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/global/blocks/_blocks.scss
@@ -3,7 +3,7 @@ body {
   .block-content--type-text,
   .node__body {
 		margin: 0;
-		padding: 0;
+		padding: 0!important;
 
 		p {
 			font-family: $font-serif;
@@ -32,13 +32,13 @@ body {
 			list-style-position: outside;
 			margin-bottom: 20px;
 			margin-top: 20px;
-      padding: 0;
+            padding: 0!important;
 		}
 
 		ol {
 			margin-bottom: 20px;
 			margin-top: 20px;
-      padding: 0;
+            padding: 0;
 		}
   }
 
